--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "React webcam component",
   "main": "dist/react-webcam.js",
   "scripts": {
-    "build": "./node_modules/.bin/babel lib --out-dir dist"
-  },
-  "browserify": {
-    "transform": [
-      "reactify"
-    ]
+    "build": "babel src --out-dir lib",
+    "build:umd": "webpack src/react-webcam.js dist/react-webcam.js && NODE_ENV=production webpack src/react-webcam.js dist/react-webcam.min.js",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -30,6 +27,14 @@
     "react": ">=0.13.0"
   },
   "devDependencies": {
-    "babel": "^5.6.7"
+    "babel": "^5.6.7",
+    "babel-core": "^5.6.18",
+    "babel-eslint": "^3.1.15",
+    "babel-loader": "^5.1.4",
+    "eslint": "^0.23",
+    "eslint-config-airbnb": "0.0.6",
+    "eslint-plugin-react": "^2.3.0",
+    "webpack": "^1.9.6",
+    "webpack-dev-server": "^1.8.2"
   }
 }
