--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/react-webcam.js",
   "scripts": {
     "prepublish": "npm run build:umd",
-    "build": "babel src --out-dir lib",
-    "build:umd": "webpack src/react-webcam.js dist/react-webcam.js && NODE_ENV=production webpack src/react-webcam.js dist/react-webcam.min.js",
+    "build": "webpack src/react-webcam.js dist/react-webcam.js",
+    "build:umd": "npm run build && NODE_ENV=production webpack src/react-webcam.js dist/react-webcam.min.js",
     "lint": "eslint src"
   },
   "repository": {
