--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-webcam",
-  "version": "0.0.14",
+  "name": "react-webcam-onfido",
+  "version": "0.0.15",
   "description": "React webcam component",
   "main": "dist/react-webcam.js",
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cezary/react-webcam.git"
+    "url": "https://github.com/onfido/react-webcam.git"
   },
   "keywords": [
     "react",
@@ -21,9 +21,9 @@
   "author": "Cezary Wojtkowski <cezary@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cezary/react-webcam/issues"
+    "url": "https://github.com/onfido/react-webcam/issues"
   },
-  "homepage": "https://github.com/cezary/react-webcam",
+  "homepage": "https://github.com/onfido/react-webcam",
   "peerDependencies": {
     "react": ">=0.14.0",
     "react-dom": ">=0.14.0"
