--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-webcam-onfido",
-  "version": "0.0.16",
+  "version": "0.0.17.R1",
   "description": "React webcam component",
   "main": "dist/react-webcam.js",
   "scripts": {
