--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   "devDependencies": {
     "babel": "^5.6.7",
     "babel-core": "^5.6.18",
-    "babel-eslint": "^3.1.15",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^5.1.4",
-    "eslint": "^0.23",
-    "eslint-config-airbnb": "0.0.6",
-    "eslint-plugin-react": "^2.3.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "webpack": "^1.9.6"
   },
   "dependencies": {
