--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "react-dom": ">=0.14.0"
   },
   "devDependencies": {
-    "babel": "^5.6.7",
-    "babel-core": "^5.6.18",
+    "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^5.1.4",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.5.0",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.2.0",
