--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepublish": "npm run build:umd",
     "build": "webpack",
     "build:umd": "npm run build && NODE_ENV=production webpack",
-    "lint": "eslint src",
+    "lint": "eslint src --fix",
     "dev": "webpack-dev-server --inline --hot --progress --https"
   },
   "repository": {
@@ -32,11 +32,11 @@
   "devDependencies": {
     "babel": "^5.6.7",
     "babel-core": "^5.6.18",
-    "babel-eslint": "^3.1.15",
+    "babel-eslint": "^5.0.1",
     "babel-loader": "^5.1.4",
-    "eslint": "^0.23",
-    "eslint-config-airbnb": "0.0.6",
-    "eslint-plugin-react": "^2.3.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^2.1.0",
+    "eslint-plugin-react": "^3.13.0",
     "html-webpack-plugin": "^2.23.0",
     "webpack": "^1.9.6",
     "webpack-dev-server": "^1.16.4"
