fixed manual lint errors
some rules had to be turned off since they did not work well

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,10 @@
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/react-in-jsx-scope": 2,
-    "no-console": 0
+    "no-console": 0,
+    "comma-dangle": 0,
+    "react/sort-comp": 0,
+    "prefer-const": 0
   },
   "plugins": [
     "react"
