--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "webpack": "^3.2.0"
   },
   "dependencies": {
-    "prop-types": "^15.5.8"
+    "prop-types": "^15.5.8",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
