--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-webcam",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "React webcam component",
   "main": "dist/react-webcam.js",
   "scripts": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mozmorris/react-webcam.git"
+    "url": "https://github.com/cliener/react-webcam.git"
   },
   "keywords": [
     "react",
@@ -19,11 +19,15 @@
     "webcam"
   ],
   "author": "Moz Morris <mozmorris@gmail.com>",
+  "contributors": [{
+    "name": "Chris Lienert",
+    "email": "rezonate@gmail.com"
+  }],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mozmorris/react-webcam/issues"
+    "url": "https://github.com/cliener/react-webcam/issues"
   },
-  "homepage": "https://github.com/mozmorris/react-webcam",
+  "homepage": "https://github.com/cliener/react-webcam",
   "peerDependencies": {
     "react": ">=0.14.0",
     "react-dom": ">=0.14.0"
