--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "Moz Morris <mozmorris@gmail.com>",
   "contributors": [{
     "name": "Chris Lienert",
-    "email": "rezonate@gmail.com"
+    "email": "rez@iinet.net.au"
   }],
   "license": "MIT",
   "bugs": {
