--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cliener/react-webcam",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "React webcam component",
   "main": "dist/react-webcam.js",
   "scripts": {
@@ -19,10 +19,12 @@
     "webcam"
   ],
   "author": "Moz Morris <mozmorris@gmail.com>",
-  "contributors": [{
-    "name": "Chris Lienert",
-    "email": "rez@iinet.net.au"
-  }],
+  "contributors": [
+    {
+      "name": "Chris Lienert",
+      "email": "rez@iinet.net.au"
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/cliener/react-webcam/issues"
