--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   },
   "homepage": "https://github.com/onfido/react-webcam",
   "peerDependencies": {
-    "react": ">=0.14.0",
-    "react-dom": ">=0.14.0"
+    "react": ">=0.14.0"
   },
   "devDependencies": {
     "babel": "^5.6.7",
