--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,67 @@
 {
-  "extends": "eslint-config-airbnb",
   "parser": "babel-eslint",
+  "extends": [
+    "eslint:recommended",
+    "plugin:flowtype/recommended"
+  ],
   "env": {
     "browser": true,
+    "node": true,
     "mocha": true,
-    "node": true
+    "es6": true
   },
-  "rules": {
-    "react/jsx-uses-react": 2,
-    "react/jsx-uses-vars": 2,
-    "react/react-in-jsx-scope": 2,
-    "no-console": 0,
-    "comma-dangle": 0,
-    "react/sort-comp": 0,
-    "prefer-const": 0
+  "parserOptions": {
+    "ecmaFeatures": {
+      "modules": true,
+      "jsx": true
+    }
   },
   "plugins": [
-    "react"
+    "react",
+    "flowtype",
+    "flowtype-errors"
   ],
-  "ecmaFeatures": {
-    "jsx": true
+  "globals": {},
+  "rules": {
+    "no-empty": 0,
+    "no-console": 0,
+    "no-unused-vars": [2, { "varsIgnorePattern": "^React$" }],
+    "no-cond-assign": 1,
+    semi: ["error", "always"],
+    "camelcase": 0,
+    "comma-style": 2,
+    "comma-dangle": [2, "only-multiline"],
+    "indent": [0, "tab", {"SwitchCase": 1}],
+    "no-mixed-spaces-and-tabs": [2, "smart-tabs"],
+    "no-trailing-spaces": [2, { "skipBlankLines": true }],
+    "max-nested-callbacks": [2, 3],
+    "no-eval": 2,
+    "no-implied-eval": 2,
+    "no-new-func": 2,
+    "guard-for-in": 2,
+    "eqeqeq": 1,
+    "no-else-return": 2,
+    "no-redeclare": 2,
+    "no-dupe-keys": 2,
+    "radix": 2,
+    "strict": [2, "never"],
+    "no-shadow": 0,
+    "no-delete-var": 2,
+    "no-undef-init": 2,
+    "no-shadow-restricted-names": 2,
+    "handle-callback-err": 0,
+    "no-lonely-if": 2,
+    "keyword-spacing": 1,
+    "constructor-super": 2,
+    "no-this-before-super": 2,
+    "no-dupe-class-members": 2,
+    "no-const-assign": 2,
+    "prefer-spread": 2,
+    "no-useless-concat": 2,
+    "no-var": 2,
+    "object-shorthand": 2,
+    "prefer-arrow-callback": 2,
+    "react/jsx-uses-vars": 1,
+    "flowtype-errors/show-errors": 2
   }
 }
