--- a/package.json
+++ b/package.json
@@ -30,21 +30,21 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^5.0.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^2.1.0",
-    "eslint-plugin-react": "^3.13.0",
+    "eslint": "^3.6.1",
+    "eslint-plugin-flowtype": "^2.41.0",
+    "eslint-plugin-flowtype-errors": "^3.3.6",
+    "eslint-plugin-react": "^6.3.0",
     "flow-bin": "^0.63.1",
     "html-webpack-plugin": "^2.29.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.6"
   },
-  "dependencies": {
-    "babel-plugin-transform-react-jsx": "^6.24.1"
-  }
+  "dependencies": {}
 }
