added travis deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,20 @@
 language: node_js
+addons:
+  ssh_known_hosts: bitbucket.org
 node_js:
-  - "iojs"
+  - 8
+os:
+  - linux
+env:
+  - NODE_ENV=production
+cache:
+  directories:
+    - "node_modules"
+install:
+  - npm --production=false install
+script:
+  - npm run build
+after_success:
+  - python node_modules/travis-weigh-in/weigh_in.py dist/react-webcam.min.js
+  - chmod ugo+x ./deploy.sh
+  - ./deploy.sh
