--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "webpack": "^2.5.1"
   },
   "dependencies": {
