improved facindMode typing; improved flow setup
Removed flow from linter
Made flow its own npm task
Fixed a lint error
Made facingMode a complex type rather than just a string

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,7 @@
 {
   "parser": "babel-eslint",
   "extends": [
-    "eslint:recommended",
-    "plugin:flowtype/recommended"
+    "eslint:recommended"
   ],
   "env": {
     "browser": true,
@@ -17,9 +16,7 @@
     }
   },
   "plugins": [
-    "react",
-    "flowtype",
-    "flowtype-errors"
+    "react"
   ],
   "globals": {},
   "rules": {
@@ -61,7 +58,6 @@
     "no-var": 2,
     "object-shorthand": 2,
     "prefer-arrow-callback": 2,
-    "react/jsx-uses-vars": 1,
-    "flowtype-errors/show-errors": 2
+    "react/jsx-uses-vars": 1
   }
 }
