--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,29 @@
 {
   "sourceMaps": true,
   "presets": [
-    "es2015",
-    "stage-2"
+    "@babel/preset-env",
+    "@babel/preset-flow"
   ],
   "plugins": [
-    ["transform-runtime", {
-      "helpers": true,
-      "polyfill": false,
-      "regenerator": false,
-      "moduleName": "babel-runtime"
-    }],
-    ["transform-react-jsx"],
-    [ "transform-flow-strip-types" ]
+    ["@babel/plugin-transform-runtime",
+      {
+        "corejs": 3,
+        "helpers": true,
+        "regenerator": false
+      }
+    ],
+    "@babel/plugin-transform-react-jsx",
+    "@babel/plugin-transform-flow-strip-types",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-import-meta",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-json-strings",
+    ["@babel/plugin-proposal-decorators",
+      { "legacy": true }
+    ],
+    "@babel/plugin-proposal-function-sent",
+    "@babel/plugin-proposal-export-namespace-from",
+    "@babel/plugin-proposal-numeric-separator",
+    "@babel/plugin-proposal-throw-expressions"
   ]
 }
