--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-webcam-onfido",
-  "version": "0.1.11",
+  "version": "0.1.12-rc1",
   "description": "React webcam component",
   "main": "dist/react-webcam.js",
   "scripts": {
