--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "jsx-a11y/media-has-caption": 0,
     "react/forbid-prop-types": 0,
     "react/jsx-filename-extension": 0,
+    "react/no-unused-prop-types": 0,
     "react/require-default-props": 0
   }
 }
