--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "React webcam component",
   "main": "dist/react-webcam.js",
   "scripts": {
-    "prepublish": "npm run build:umd",
-    "build": "webpack src/react-webcam.js dist/react-webcam.js",
-    "build:umd": "npm run build && NODE_ENV=production webpack src/react-webcam.js dist/react-webcam.min.js",
+    "prepublish": "npm run build:production",
+    "build": "NODE_ENV=development webpack-cli src/react-webcam.js",
+    "build:production": "npm run build && NODE_ENV=production webpack-cli src/react-webcam.js",
     "lint": "eslint src"
   },
   "repository": {
@@ -44,7 +44,8 @@
     "eslint-plugin-react": "^7.13.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "webpack": "^2.5.1"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
     "prop-types": "^15.5.8"
