--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react-dom": ">=15.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.18",
     "@types/prop-types": "^15.7.1",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-test-renderer": "^16.9.0",
     "awesome-typescript-loader": "^5.2.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -45,6 +47,7 @@
     "react-dom": "^16.3.1",
     "react-test-renderer": "^16.8.6",
     "source-map-loader": "^0.2.4",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.6.2",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2"
