--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,24 @@
 {
-  "parser": "babel-eslint",
-  "plugins": [
-    "jest"
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
-  "extends": "airbnb",
-  "env": {
-    "browser": true,
-    "node": true,
-    "jest/globals": true
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "rules": {
-    "jsx-a11y/media-has-caption": 0,
-    "react/forbid-prop-types": 0,
-    "react/jsx-filename-extension": 0,
-    "react/no-unused-prop-types": 0,
-    "react/require-default-props": 0
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-unused-vars": ["error", { "ignoreRestSiblings": true }],
+    "@typescript-eslint/ban-ts-ignore": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
