--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepublish": "npm run build:production",
     "build": "NODE_ENV=development webpack-cli",
     "build:production": "npm run build && NODE_ENV=production webpack-cli",
-    "lint": "eslint src",
+    "lint": "eslint src/react-webcam.tsx",
     "test": "jest"
   },
   "repository": {
@@ -35,13 +35,11 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-test-renderer": "^16.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.1.0",
+    "@typescript-eslint/parser": "^2.1.0",
     "awesome-typescript-loader": "^5.2.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^22.6.4",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint": "^6.3.0",
+    "eslint-plugin-react": "^7.14.3",
     "jest": "^24.8.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
