--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,11 @@
     "strictNullChecks": true,
     "module": "es6",
     "jsx": "react",
-    "target": "es2017",
+    "target": "es5",
     "allowJs": false,
     "moduleResolution": "node",
-    "declaration": true
+    "declaration": true,
+    "lib": ["dom", "es5", "scripthost", "es6"]
   },
   "include": [
     "./src/"
