--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-webcam",
-  "version": "3.1.1",
+  "version": "4.0.0-beta.0",
   "description": "React webcam component",
   "main": "dist/react-webcam.js",
   "types": "dist/react-webcam.d.ts",
