--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "webpack-dev-server": "^2.9.6"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.4.3"
+    "@babel/runtime-corejs3": "^7.4.3",
+    "enumerate-devices": "^1.1.1"
   }
 }
