make ref work in typescript

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "NODE_ENV=development webpack-cli",
     "build:production": "npm run build && NODE_ENV=production webpack-cli",
     "lint": "eslint src/react-webcam.tsx",
-    "test": "jest"
+    "test": "tsc && jest"
   },
   "repository": {
     "type": "git",
